--- a/vDomImp/src/index.html
+++ b/vDomImp/src/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         Hei!
-        <script src="main.js">
+        <script src="./main.js">
         </script>
     </body>
 </html>
