implementing a mount function and diff that compares vDOM tree with the real DOM tree

--- a/vDomImp/src/index.html
+++ b/vDomImp/src/index.html
@@ -4,8 +4,7 @@
         <title>Hello Verden</title>
     </head>
     <body>
-        Hei!
-        <script src="./main.js">
-        </script>
+        <div id="app"></div>
+        <script src="./main.js"></script>
     </body>
 </html>
